--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   </style>
   <body>
     <!-- start here -->
-    <div class="flex justify-center main-conatiner font-[Montserrat]">
+    <div class=" p-[0px] m-[0px] flex justify-center main-conatiner font-[Montserrat]">
       <!-- header-section -->
       <header class="fixed left-[0px]">
         <div
@@ -32,19 +32,20 @@
         >
           Enjoy Free Shipping On All Orders
         </div>
-        <div class="navbar px-[40px] pr-[40px]  ">
+        <div class="navbar px-[10px] sm:px-[40px] sm:pr-[40px]  ">
+            <!-- navbar---- -->
           <nav
-            class=" h-[40px]  md:h-[70px] flex justify-between items-center borde bg-[#FFFFFF]"
+            class=" h-[50px]  md:h-[70px] flex justify-between items-center borde bg-[#FFFFFF]"
           >
           <div class="humburger-tab md:hidden">
         <a href="#">
             <img src="./Images/Style=Two Tone.png" alt="">
         </a>
           </div>
-            <div class="logo w-[130px] md:w-[184px]">
+            <div class="logo  ml-[10px] sm:ml-[0px] w-[130px] md:w-[184px]">
               <img src=".//Images/Logo.svg" alt="logo" />
             </div>
-            <div class=" hidden md:flex nav-links text-[11px] lg:text-[18px]  font-[400] items-center gap-[12px] lg:gap-[24px]  ">
+            <div class=" hidden md:flex nav-links text-[11px] text-[#404040] lg:text-[18px]  font-[400] items-center gap-[12px] lg:gap-[24px]  ">
                 <div class=" links link-1">
                     <a href="#">Collection</a>
                 </div>
@@ -86,6 +87,13 @@
           </nav>
         </div>
       </header>
+      <!-- hearder-End-here -->
+       <!--============================================================================================================ -->
+
+       <!-- hero-section -->
+        <div class="hero bg-black  ">
+            <img src="./Images/hero image.png" alt="">
+        </div>
     </div>
   </body>
 </html>
