--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,6 @@
       height: 24px;
       border-radius: 100%;
     }
-
     
   </style>
 
@@ -283,24 +282,28 @@
             </div>
             <!-- ------------------------------- -->
               <!-- cloths-collection-section -->
-              <div class="  image-of-cloths-collection grid grid-cols-2  mt-[20px] lg:gap-[16px]  ">
+              <div class="  image-of-cloths-collection grid grid-cols-2 mb-[30px]  mt-[20px] lg:gap-[16px]   ">
               <div class="left-div flex flex-col gap-[60px]   ">
-                <div class="upper-image  max-w-[650px] h-[500px]  ">
+                <div class="upper-image  max-w-[600px] h-[500px] relative z-[-1] ">
                   <img src="./Images/upper-left-image.png" class="w-[100%] h-[100%] object-cover " alt="">
+                  <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
                 </div>
-                <div class="lower-image max-w-[650px] h-[827px] ">
-                  <img src="./Images/lower-left-image.png" class=" w-[100%] h-[100%] object-cover" alt="">
+                <div class="lower-image max-w-[600px] h-[887px] relative z-[-1] ">
+                  <img src="./Images/lower-left-image.png" class=" w-[100%] h-[100%]  object-cover" alt="">
+                  <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
                 </div>
               </div>
               <!-- right -->
-              <div class="right-div  flex flex-col items-end gap-[125px]   ">
+              <div class="right-div  flex flex-col items-end gap-[185px]   ">
                 <!-- right-upperimage -->
-                <div class="right-upper-image max-w-[650px] h-[827px] ">
+                <div class="right-upper-image max-w-[650px] h-[827px] relative z-[-1] ">
                   <img src="./Images/right-image-up.png " class=" w-[100%] h-[100%] object-cover " alt="">
+                  <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
                 </div>
                 <!-- right-lower-image -->
-                <div class=" right-lower-image max-w-[600px] h-[435px] ">
-                  <img src="./Images/right-lower-img.jfif" class=" w-[100%] h-[100%] object-cover " alt="">
+                <div class=" right-lower-image w-[600px] relative h-[435px] z-[-1] ">
+                  <img src="./Images/right-lower-img.jfif" class=" w-[100%] h-[100%] object-cover relative " alt="">
+                  <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
                 </div>
                 </div>
               </div>
