--- a/src/index.html
+++ b/src/index.html
@@ -283,25 +283,25 @@
             <!-- ------------------------------- -->
               <!-- cloths-collection-section -->
               <div class="  image-of-cloths-collection grid grid-cols-2 mb-[30px]  mt-[20px] lg:gap-[16px]   ">
-              <div class="left-div flex flex-col gap-[60px]   ">
-                <div class="upper-image  max-w-[600px] h-[500px] relative z-[-1] ">
+              <div class="left-div flex flex-col  gap-[70px] lg:gap-[60px]   ">
+                <div class="upper-image min-w-[152px] h-[165px]  xl:max-w-[600px] xl:h-[500px] relative z-[-1] ">
                   <img src="./Images/upper-left-image.png" class="w-[100%] h-[100%] object-cover " alt="">
                   <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
                 </div>
-                <div class="lower-image max-w-[600px] h-[887px] relative z-[-1] ">
+                <div class="lower-image min-w-[152px] h-[293px] xl:max-w-[600px] xl:h-[887px] relative z-[-1] ">
                   <img src="./Images/lower-left-image.png" class=" w-[100%] h-[100%]  object-cover" alt="">
                   <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
                 </div>
               </div>
               <!-- right -->
-              <div class="right-div  flex flex-col items-end gap-[185px]   ">
+              <div class="right-div  flex flex-col items-end gap-[40px] xl:gap-[185px]   ">
                 <!-- right-upperimage -->
-                <div class="right-upper-image max-w-[650px] h-[827px] relative z-[-1] ">
+                <div class="right-upper-image min-w-[152px] h-[316px] xl:max-w-[650px] xl:h-[827px] relative z-[-1] ">
                   <img src="./Images/right-image-up.png " class=" w-[100%] h-[100%] object-cover " alt="">
                   <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
                 </div>
                 <!-- right-lower-image -->
-                <div class=" right-lower-image w-[600px] relative h-[435px] z-[-1] ">
+                <div class=" right-lower-image w-[152px] h-[175px] xl:w-[600px] relative xl:h-[435px] z-[-1] ">
                   <img src="./Images/right-lower-img.jfif" class=" w-[100%] h-[100%] object-cover relative " alt="">
                   <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
                 </div>
